<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_expland_mark"
        android:icon="@drawable/mark"
        android:showAsAction="always" >
        <menu>
            <item android:id="@+id/menu_list"         
		        android:title="@string/menu_list" 
		        android:icon="@drawable/list" 
		        android:showAsAction="ifRoom" />    
		    <item android:id="@+id/menu_search"
		        android:title="@string/menu_search"
		        android:icon="@drawable/ic_action_search"
		        android:showAsAction="always|collapseActionView"
		        android:actionViewClass="android.widget.SearchView" />
		    <item android:id="@+id/menu_save"         
		        android:title="@string/menu_save" 
		        android:icon="@drawable/save" 
		        android:showAsAction="ifRoom" />
		    <item android:id="@+id/menu_clear"         
		        android:title="@string/menu_clear" 
		        android:icon="@drawable/remove" 
		        android:showAsAction="ifRoom" />	          
        </menu>
    </item>   
    <item android:id="@+id/menu_plot"         
        android:title="@string/menu_plot" 
        android:icon="@drawable/plot" 
        android:showAsAction="always" />        
	<item android:id="@+id/menu_about"         
		        android:title="@string/menu_about" 
		        android:icon="@drawable/about" 
		        android:showAsAction="ifRoom" />                
</menu>
